hw3/decafexpr/output/dev/llvm/boolcallchain3expr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/boolcallchain3expr.llvm:12:1: error: expected instruction opcode
}
^
